--- a/.gitignore
+++ b/.gitignore
@@ -57,16 +57,13 @@ bin/
 *.code*
 .vscode
 
-# Resources source data
-res-src/
-
 # WIP data
+wip/
 doc-wip/
 res-src-wip/
 
-
-# mdtools repo
-mdtools/
+# Resources source data
+res-src/
 
 # Mame history dir
 history/
